// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
[
  [
    "set-severity",
    undefined,
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={true}
    overlay={
      <SetSeverityPopup
        issue={
          {
            "severity": "BLOCKER",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <ButtonLink
      aria-expanded={true}
      aria-label="issue.severity.severity_x_click_to_change.severity.BLOCKER"
      className="issue-action issue-action-with-options js-issue-set-severity"
      onClick={[Function]}
    >
      <SeverityHelper
        className="issue-meta-label"
        severity="BLOCKER"
      />
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render with the action 1`] = `
<div
  className="dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <SetSeverityPopup
        issue={
          {
            "severity": "BLOCKER",
          }
        }
        onSelect={[Function]}
      />
    }
  >
    <ButtonLink
      aria-expanded={false}
      aria-label="issue.severity.severity_x_click_to_change.severity.BLOCKER"
      className="issue-action issue-action-with-options js-issue-set-severity"
      onClick={[Function]}
    >
      <SeverityHelper
        className="issue-meta-label"
        severity="BLOCKER"
      />
      <DropdownIcon
        className="little-spacer-left"
      />
    </ButtonLink>
  </Toggler>
</div>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<SeverityHelper
  className="issue-meta-label"
  severity="BLOCKER"
/>
`;
